Nav overlaping element fixed in small screen

--- a/sass/_small-creen.scss
+++ b/sass/_small-creen.scss
@@ -14,6 +14,9 @@
         justify-content: space-evenly;
         padding-left: 0;
         margin-bottom: 1rem;
+        &-item {
+          padding: 0.6rem 1rem;
+        }
       }
     }
   }
